--- a/CSS/selector.html
+++ b/CSS/selector.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Chapter2</title>
     <link rel="stylesheet" href="selector.css">
+    <link rel="stylesheet" href="style2.css">
   </head>
   <body>
     <header>
@@ -74,7 +75,13 @@
         <p>This is the end of my website. Know more about us on <a href="http://www.google.com">Google</a></p>
     </main>
     <div id="myId">
-        <p>This is Paragraph</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolorem sequi cumque suscipit deserunt saepe molestias. Doloribus nemo adipisci tenetur delectus voluptas non recusandae molestias, explicabo ex, ratione quod doloremque!</p>
+        <div>
+            <input type="radio" id="yes" name="agree">
+            <label for="yes">Yes</label>
+            <input type="radio" id="no" name="agree">
+            <label for="no">No</label>
+        </div>
     </div>
   </body>
 </html>
